hphp/test/slow/expression_trees/await_in_splice_xhp_cond.php.expectf
Fatal error: `await` cannot be used as an expression in this location because it's conditionally executed. in %s/await_in_splice_xhp_cond.php on line 5
